--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: berserker;
+    src: url(Berserker-Regular.ttf) format('truetype');
+}
+
 body, html {
     margin: 0;
-    padding: 0;
+    padding: 10;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 ul { list-style: none; padding-left: 5px; }
@@ -11,6 +16,68 @@ a { color:blue; text-decoration: none;}
     border-top: solid 1px #cdcdcd;
     border-bottom: solid 1px #cdcdcd;
 }
+
+/*Header*/
+.header{
+    background-color: #1965AC;
+    width: 100%;
+}
+.container{
+    max-width: 1450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+.logo, .social{
+    width: 25%;
+}
+.logo img{
+    width: 200px;
+    cursor: pointer;
+}
+.menu{
+    width: 70%;
+}
+.menu nav a::after{
+    content: "";
+    width: 0px;
+    height: 4px;
+    background-image: linear-gradient(45deg, #1F7CD5, #100f0d);
+    position: absolute;
+    top: 30px;
+    left: 0;
+    transition: width 0.5s;
+}
+.menu nav a:hover::after{
+    width: 45px;
+}
+.menu nav a{
+    color: white;
+    text-decoration: none;
+    padding-right: 50px;
+    font-size: 18px;
+    position: relative;
+}
+.social button{
+    width: 40px;
+    height: 40px;
+    background-image: linear-gradient(45deg, #1F7CD5, #100f0d);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-right: 10px;
+    color: white;
+}
+.social button i{
+    font-size: 25px;
+    color: white;
+}
+
+
+
+
+
 .content {
     max-width: 1440px;
     margin: auto;
@@ -25,6 +92,7 @@ a { color:blue; text-decoration: none;}
 .footer {
     min-height: 100px;
     border-top: solid 1px #cdcdcd;
+    background-color: blue;
 }
 .anchors {
     border-left: solid 1px #cdcdcd;
