--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     font-family: berserker;
     src: url(Berserker-Regular.ttf) format('truetype');
 }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Sora:wght@300&display=swap');
 
 body, html {
     margin: 0;
@@ -10,14 +11,49 @@ body, html {
 }
 ul { list-style: none; padding-left: 5px; }
 a { color:blue; text-decoration: none;}
+
+/*======================================================= Barra de Pesquisa =======================================================================*/
 .bar {
-    background-color: #f9f9fb;
+    background-color: #1e79ce;
     padding:15px;
-    border-top: solid 1px #cdcdcd;
-    border-bottom: solid 1px #cdcdcd;
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+    background-image: radial-gradient(circle, rgba(31,125,213,1) 0%, rgba(25,101,172,1) 50%, rgba(27,51,106,1) 100%);
+}
+.search, .search-bar{
+    display: flex;
+    justify-content: center;
+    border-radius: 50px;
+    height: 30px;
+}
+.search input[type="text"]{
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    font-size: 16px;
+    width: 500px;
+}
+.search #button{
+    display: inline-block;
+    outline: 0;
+    cursor: pointer;
+    text-align: center;
+    border: 0;
+    padding: 7px 16px;
+    min-height: 30px;
+    min-width: 30px;
+    color: white;
+    background: #1e79ce;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 14px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 0px, rgba(0, 0, 0, 0.2) 0px -1px 0px 0px inset;
+}
+.search #button:hover{
+    background: #114270;
 }
 
-/*Header*/
+/*=========================================================== Header =========================================================================*/
 .header{
     background-color: #1965AC;
     width: 100%;
@@ -58,6 +94,7 @@ a { color:blue; text-decoration: none;}
     padding-right: 50px;
     font-size: 18px;
     position: relative;
+    font-family: 'Sora', sans-serif;
 }
 .social button{
     width: 40px;
@@ -73,10 +110,61 @@ a { color:blue; text-decoration: none;}
     font-size: 25px;
     color: white;
 }
-
-
-
-
+/*========================================================= Barra Lateral =========================================================================*/
+.toc{
+    background-color: transparent;
+    border: 1px solid #3d4146;
+    border-radius: 3px;
+    font-size: 100%;
+    margin: 24px auto 24px 0;
+    padding: 0;
+}
+.toctogglecheckbox{
+    display: inline !important;
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+}
+.toctitle{
+    align-items: center;
+    border-bottom: 1px solid #3d4146;
+    display: flex;
+    justify-content: space-between;
+    line-height: 1;
+    padding: 12px;
+}
+.toc .toctitle h2{
+    align-items: center;
+    border: 0;
+    color: #e6e6e6;
+    display: flex;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: 500;
+    line-height: 1.25;
+    margin: 0;
+    padding: 0;
+}
+.toc .toctitle h2 .uil{
+    margin-right: 6px;
+}
+.toc ul li a{
+    border-radius: 3px;
+    color: #e6e6e6;
+    display: block;
+    line-height: 1.75;
+    padding: 2px 6px;
+    text-decoration: none;
+    transition-duration: .3s;
+    transition-property: background-color,color;
+}
+.toc ul li{
+    margin-left: 12px;
+    overflow-wrap: break-word;
+}
+.toc ul li .tocnumber{
+    color: rgb(230, 230, 230);
+}
 
 .content {
     max-width: 1440px;
@@ -100,6 +188,7 @@ a { color:blue; text-decoration: none;}
 }
 .sidebar {
     border-right: solid 1px #cdcdcd;
+    background-color: #080d14;
 }
 figure {
     text-align: center;
