--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,11 @@
 
 body, html {
     margin: 0;
-    padding: 10;
+    padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow-x: hidden;
 }
-ul { list-style: none; padding-left: 5px; }
+ul { list-style: none; padding-left: 1px; }
 a { color:blue; text-decoration: none;}
 
 /*======================================================= Barra de Pesquisa =======================================================================*/
@@ -111,85 +112,126 @@ a { color:blue; text-decoration: none;}
     color: white;
 }
 /*========================================================= Barra Lateral =========================================================================*/
+.sidebar {
+    background-color: #080d14;
+}
 .toc{
     background-color: transparent;
     border: 1px solid #3d4146;
-    border-radius: 3px;
+    border-radius: 10px;
     font-size: 100%;
-    margin: 24px auto 24px 0;
-    padding: 0;
+    margin: 5px;
 }
 .toctogglecheckbox{
-    display: inline !important;
     position: absolute;
     opacity: 0;
-    z-index: -1;
 }
 .toctitle{
-    align-items: center;
-    border-bottom: 1px solid #3d4146;
-    display: flex;
-    justify-content: space-between;
-    line-height: 1;
-    padding: 12px;
+    padding: 5px;
 }
 .toc .toctitle h2{
     align-items: center;
-    border: 0;
     color: #e6e6e6;
-    display: flex;
     font-family: inherit;
     font-size: inherit;
     font-weight: 500;
-    line-height: 1.25;
+    line-height: 1.5px;
     margin: 0;
     padding: 0;
 }
 .toc .toctitle h2 .uil{
-    margin-right: 6px;
+    margin-right: 1px;
 }
 .toc ul li a{
     border-radius: 3px;
     color: #e6e6e6;
     display: block;
     line-height: 1.75;
-    padding: 2px 6px;
+    padding: 2px 5px;
     text-decoration: none;
-    transition-duration: .3s;
-    transition-property: background-color,color;
 }
 .toc ul li{
     margin-left: 12px;
     overflow-wrap: break-word;
 }
-.toc ul li .tocnumber{
-    color: rgb(230, 230, 230);
-}
-
-.content {
-    max-width: 1440px;
-    margin: auto;
-    grid-gap: 3rem;
-    display: grid;
-    gap: 3rem;
-    grid-template-areas: "sidebar main anchors";
-    grid-template-columns: minmax(0,15rem) minmax(0,2.5fr) minmax(0,15rem);
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-.footer {
-    min-height: 100px;
-    border-top: solid 1px #cdcdcd;
-    background-color: blue;
-}
-.anchors {
-    border-left: solid 1px #cdcdcd;
-    padding-left: 15px;
-}
-.sidebar {
-    border-right: solid 1px #cdcdcd;
-    background-color: #080d14;
+/*========================================================= Conteúdo =========================================================================*/
+.main article h1{
+    text-align: center;
+    font-size: 30px;
+    font-family: berserker;
 }
 figure {
     text-align: center;
+}
+.main article p{
+    text-align: justify;
+}
+.nav-table h2{
+    text-align: center;
+}
+.row-table{
+    text-align: center;
+    color: white;
+}
+.table-lateral{
+    width: 200px;
+    border: 1px solid #3d4146;
+    border-radius: 5.5px;
+    box-sizing: border-box;
+    background-color: #080d14;
+}
+.table-lateral th{
+    color: #e6e6e6;
+    border-bottom: 1px solid #3d4146;
+    padding: 0;
+    margin: 0 auto;
+}
+.table-lateral td{
+    color: #e6e6e6;
+    border-bottom: 1px solid #3d4146;
+    padding: 0;
+    margin: 0 auto;
+}
+.date-row{
+    background-color: #486572;
+    font-weight: 500;
+}
+/*========================================================= Padrão do Site ========================================================================*/
+.content {
+    max-width: 1440px;
+    margin: auto;
+    grid-gap: 1rem;
+    display: grid;
+    gap: 1rem;
+    grid-template-areas: "sidebar main anchors";
+    grid-template-columns: minmax(0,15rem) minmax(0,2.5fr) minmax(0,15rem);
+    background-color: #080d14;
+    color: #e6e6e6;
+    
+}
+.footer {
+    min-height: 100px;
+    background-color: #080d14;
+    width: 1440px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    color: #e6e6e6;
+    font-size: 15px;
+}
+.social-footer{
+    display: flex;
+}
+.social-footer button{
+    width: 40px;
+    height: 40px;
+    background-image: linear-gradient(45deg, #1F7CD5, #100f0d);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-right: 10px;
+    color: white;
+}
+.social-footer button i{
+    font-size: 25px;
+    color: white;
 }
