--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+:root{
+
+}
+
 @font-face {
     font-family: berserker;
     src: url(Berserker-Regular.ttf) format('truetype');
@@ -8,7 +12,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    overflow-x: hidden;
+    overflow-x:hidden;
 }
 ul { list-style: none; padding-left: 1px; }
 a { color:blue; text-decoration: none;}
@@ -207,10 +211,8 @@ figure {
     grid-template-columns: minmax(0,15rem) minmax(0,2.5fr) minmax(0,15rem);
     background-color: #080d14;
     color: #e6e6e6;
-    
 }
-.footer {
-    min-height: 100px;
+footer{
     background-color: #080d14;
     width: 1440px;
     margin: 0 auto;
@@ -234,4 +236,12 @@ figure {
 .social-footer button i{
     font-size: 25px;
     color: white;
+}
+/*========================================================= Plot =========================================================================*/
+.contents a{
+    color: #e6e6e6;
+    text-decoration: none;
+}
+hr{
+    border-color: #3d4146;
 }
