--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,15 +201,19 @@ figure {
     font-weight: 500;
 }
 /*========================================================= Padrão do Site ========================================================================*/
+section{
+    background-color: #080d14;
+}
 .content {
     max-width: 1440px;
     margin: auto;
     grid-gap: 1rem;
     display: grid;
     gap: 1rem;
+    background-color: #16202e;
     grid-template-areas: "sidebar main anchors";
     grid-template-columns: minmax(0,15rem) minmax(0,2.5fr) minmax(0,15rem);
-    background-color: #080d14;
+    text-align: justify;
     color: #e6e6e6;
 }
 footer{
@@ -242,6 +246,60 @@ footer{
     color: #e6e6e6;
     text-decoration: none;
 }
+.contents{
+    margin-left: 0;
+}
+
+h4{
+    text-align: center;
+}
+
 hr{
     border-color: #3d4146;
 }
+/*========================================================= Characters =========================================================================*/
+.characters ul{
+    display: flex;
+    justify-content: space-around;
+}
+.characters ul p{
+    text-align: center;
+    margin: 0;
+    padding-top: 0;
+    font-family: berserker;
+}
+.characters .containe ul{
+    display: flex;
+    justify-content: space-around;
+}
+
+#char{
+    width: 200px;
+    border-radius: 10px;
+}
+.containe{
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+}
+.containe:hover .flip{
+    transform: rotateY(180deg);
+}
+.flip{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    transform-style: preserve-3d;
+    transition: .5s;
+}
+.front, .back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+.back{
+    transform: rotateY(180deg);
+}
+
