--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body, html {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     overflow-x:hidden;
+    scroll-behavior: smooth;
 }
 ul { list-style: none; padding-left: 1px; }
 a { color:blue; text-decoration: none;}
@@ -273,7 +274,7 @@ hr{
     justify-content: space-around;
 }
 
-#char{
+.char{
     width: 200px;
     border-radius: 10px;
 }
@@ -281,6 +282,8 @@ hr{
     display: flex;
     justify-content: space-around;
     position: relative;
+    width: 200px;
+    height: 200px;
 }
 .containe:hover .flip{
     transform: rotateY(180deg);
