--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,12 @@ body, html {
     overflow-x:hidden;
     scroll-behavior: smooth;
 }
-ul { list-style: none; padding-left: 1px; }
-a { color:blue; text-decoration: none;}
+ul { list-style: none;
+    padding-left: 1px; 
+}
+a { color:blue;
+    text-decoration: none;
+}
 
 /*======================================================= Barra de Pesquisa =======================================================================*/
 .bar {
@@ -70,6 +74,7 @@ a { color:blue; text-decoration: none;}
     align-items: center;
     justify-content: center;
     margin: 0 auto;
+
 }
 .logo, .social{
     width: 25%;
